validation form quizz

--- a/app/src/main/res/layout/fragment_radio_quizz.xml
+++ b/app/src/main/res/layout/fragment_radio_quizz.xml
@@ -5,22 +5,40 @@
     android:orientation="vertical"
     tools:context="fr.link_value.sfcertif.sfcertifquizz.fragments.RadioQuestionFragment">
 
-    <FrameLayout
-
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/radio_question_container">
+        android:id="@+id/radio_question_container"
+        android:orientation="vertical"
+        android:layout_weight="1">
+        <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/radio_question"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
         <RadioGroup
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/radio_group_question"/>
-    </FrameLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/valid_quizz_btn"
+            android:id="@+id/radio_valid_btn"/>
 
-    <FrameLayout
+    </LinearLayout>
+
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/radio_answer_container">
+        android:id="@+id/radio_answer_container"
+        android:visibility="invisible"
+        android:orientation="vertical"
+        android:layout_weight="1">
 
         <TextView
             android:text="TextView"
@@ -28,11 +46,16 @@
             android:layout_height="wrap_content"
             android:id="@+id/radio_correct_answer"
             android:layout_weight="1" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radio_answer_img"/>
         <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/radio_more"
             android:layout_weight="1" />
-    </FrameLayout>
+    </LinearLayout>
 </LinearLayout>
