--- a/app/src/main/res/layout/fragment_checkbox_quizz.xml
+++ b/app/src/main/res/layout/fragment_checkbox_quizz.xml
@@ -11,8 +11,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/checkbox_question_container"
         android:orientation="vertical"
-
         android:layout_weight="1">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/checkbox_subject"/>
         <TextView
             android:text="TextView"
             android:layout_width="match_parent"
@@ -28,7 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/valid_quizz_btn"
-            android:id="@+id/checkbox_valid_btn"/>
+            android:id="@+id/checkbox_valid_btn"
+            />
     </LinearLayout>
 
 
