--- a/app/src/main/res/layout/fragment_radio_quizz.xml
+++ b/app/src/main/res/layout/fragment_radio_quizz.xml
@@ -12,6 +12,10 @@
         android:orientation="vertical"
         android:layout_weight="1">
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/radio_subject"/>
+        <TextView
             android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
