--- a/app/src/main/res/layout/fragment_simple_quizz.xml
+++ b/app/src/main/res/layout/fragment_simple_quizz.xml
@@ -12,23 +12,27 @@
         android:orientation="vertical"
         android:layout_weight="1">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAppearance="@style/SubjectFont"
             android:id="@+id/simple_subject"/>
         <TextView
             android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAppearance="@style/QuizzFont"
             android:id="@+id/simple_question" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAppearance="@style/QuizzFont"
             android:id="@+id/simple_question_edit"/>
 
-        <Button
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/valid_quizz_btn"
+            android:background="@drawable/ic_quizz_btn"
             android:id="@+id/simple_valid_btn"/>
     </LinearLayout>
 
@@ -39,22 +43,30 @@
         android:orientation="vertical"
         android:visibility="invisible"
         android:layout_weight="1">
-        <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/simple_correct_answer"
-            android:layout_weight="1"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/simple_answer_img"/>
+            <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/simple_correct_answer"
+                android:layout_weight="1"
+                android:textAppearance="@style/QuizzFont"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+        </LinearLayout>
+
         <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/simple_more"
+            android:textAppearance="@style/QuizzFont"
             android:layout_weight="1" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/simple_answer_img"/>
+
     </LinearLayout>
 </LinearLayout>
