filter by subject

--- a/app/src/main/res/menu/activity_quizzy_drawer.xml
+++ b/app/src/main/res/menu/activity_quizzy_drawer.xml
@@ -4,15 +4,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_http"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@android:drawable/ic_menu_help"
             android:title="@string/topic_http" />
         <item
             android:id="@+id/nav_security"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@android:drawable/ic_menu_help"
             android:title="@string/topic_secrurity" />
         <item
             android:id="@+id/nav_routing"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@android:drawable/ic_menu_help"
             android:title="@string/topic_routing" />
     </group>
 </menu>
