--- a/app/src/main/res/layout/content_quizzy.xml
+++ b/app/src/main/res/layout/content_quizzy.xml
@@ -7,5 +7,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="fr.link_value.sfcertif.sfcertifquizz.activities.QuizzyActivity"
     tools:showIn="@layout/app_bar_quizz">
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager_question"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
 </android.support.constraint.ConstraintLayout>
