clean code filter and cache

--- a/app/src/main/res/layout/activity_quizz.xml
+++ b/app/src/main/res/layout/activity_quizz.xml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_quizzy"
+        app:headerLayout="@layout/nav_header_quizz"
         app:menu="@menu/activity_quizzy_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
