--- a/app/src/main/res/layout/app_bar_quizz.xml
+++ b/app/src/main/res/layout/app_bar_quizz.xml
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_quizzy" />
+    <include layout="@layout/content_quizz" />
 
 </android.support.design.widget.CoordinatorLayout>
