--- a/app/src/main/res/layout/fragment_checkbox_quizz.xml
+++ b/app/src/main/res/layout/fragment_checkbox_quizz.xml
@@ -7,37 +7,38 @@
 
     <LinearLayout
 
+        android:id="@+id/checkbox_question_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/checkbox_question_container"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <TextView
+            android:id="@+id/checkbox_subject"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/SubjectFont"
-            android:id="@+id/checkbox_subject"/>
+            android:textAppearance="@style/SubjectFont" />
+
         <TextView
-            android:text="TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/QuizzFont"
             android:id="@+id/checkbox_question"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:text="TextView"
+            android:textAppearance="@style/QuizzFont" />
 
         <TableRow
+            android:id="@+id/checkbox_group_question"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkbox_group_question"/>
-        <ImageButton
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/checkbox_valid_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/valid_quizz_btn"
-            android:background="@drawable/ic_quizz_btn"
-            android:id="@+id/checkbox_valid_btn"
             />
     </LinearLayout>
-
 
 
     <LinearLayout
