--- a/app/src/main/res/layout/fragment_simple_quizz.xml
+++ b/app/src/main/res/layout/fragment_simple_quizz.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/simple_question_container"
         android:orientation="vertical"
+        android:layout_margin="@dimen/activity_horizontal_margin"
         android:layout_weight="1">
         <TextView
             android:layout_width="wrap_content"
@@ -28,11 +29,9 @@
             android:textAppearance="@style/QuizzFont"
             android:id="@+id/simple_question_edit"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/valid_quizz_btn"
-            android:id="@+id/simple_valid_btn"/>
+        <include layout="@layout/valid_button"
+            android:id="@+id/simple_valid_btn"
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -41,6 +40,7 @@
         android:id="@+id/simple_answer_container"
         android:orientation="vertical"
         android:visibility="invisible"
+        android:layout_margin="@dimen/activity_horizontal_margin"
         android:layout_weight="1">
         <LinearLayout
             android:layout_width="match_parent"
