--- a/app/src/main/res/layout/nav_header_quizz.xml
+++ b/app/src/main/res/layout/nav_header_quizz.xml
@@ -17,7 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/ic_logo_lv" />
 
     <TextView
         android:layout_width="match_parent"
