--- a/app/src/main/res/layout/content_quizz.xml
+++ b/app/src/main/res/layout/content_quizz.xml
@@ -13,5 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+    <include layout="@layout/loader"
+             android:id="@+id/loader_layout"
+        />
 
 </android.support.constraint.ConstraintLayout>
